--- a/src/variorum/Intel/CMakeLists.txt
+++ b/src/variorum/Intel/CMakeLists.txt
@@ -4,7 +4,9 @@ set(variorum_intel_headers
   ${CMAKE_CURRENT_SOURCE_DIR}/power_features.h
   ${CMAKE_CURRENT_SOURCE_DIR}/thermal_features.h
   ${CMAKE_CURRENT_SOURCE_DIR}/IvyBridge_3E.h
+  ${CMAKE_CURRENT_SOURCE_DIR}/SandyBridge_2A.h
   ${CMAKE_CURRENT_SOURCE_DIR}/Broadwell_4F.h
+  ${CMAKE_CURRENT_SOURCE_DIR}/Haswell_3F.h
   ${CMAKE_CURRENT_SOURCE_DIR}/KabyLake_9E.h
   CACHE INTERNAL "")
 
@@ -14,7 +16,9 @@ set(variorum_intel_sources
   ${CMAKE_CURRENT_SOURCE_DIR}/power_features.c
   ${CMAKE_CURRENT_SOURCE_DIR}/thermal_features.c
   ${CMAKE_CURRENT_SOURCE_DIR}/IvyBridge_3E.c
+  ${CMAKE_CURRENT_SOURCE_DIR}/SandyBridge_2A.c
   ${CMAKE_CURRENT_SOURCE_DIR}/Broadwell_4F.c
+  ${CMAKE_CURRENT_SOURCE_DIR}/Haswell_3F.c
   ${CMAKE_CURRENT_SOURCE_DIR}/KabyLake_9E.c
   CACHE INTERNAL "")
 
