Porting powmon, power_wrapper_static, and power_wrapper_dynamic to libvariorum interfaces.   - Adding powmon support for Sandy Bridge, Haswell, Broadwell, Skylake, and Kaby     Lake.   - Adding TODO file to capture what needs to be implemented.   - Collect powmon data from an unspecified number of sockets (legacy     implementation assumes two sockets).
Signed-off-by: Stephanie Labasan <labasan1@llnl.gov>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -30,6 +30,8 @@ endif()
 ### Add our examples
 add_subdirectory(examples)
 
+add_subdirectory(powmon)
+
 ### Add documentation targets
 if(BUILD_DOCS)
     include(CMake/SetupDocs.cmake)
