Added support for Intel Skylake (model 0x55) platform.
Signed-off-by: Rigoberto Moreno Delgado <morenodelgad1@llnl.gov>

--- a/src/variorum/Intel/CMakeLists.txt
+++ b/src/variorum/Intel/CMakeLists.txt
@@ -8,6 +8,8 @@ set(variorum_intel_headers
   ${CMAKE_CURRENT_SOURCE_DIR}/Broadwell_4F.h
   ${CMAKE_CURRENT_SOURCE_DIR}/Haswell_3F.h
   ${CMAKE_CURRENT_SOURCE_DIR}/KabyLake_9E.h
+  ${CMAKE_CURRENT_SOURCE_DIR}/Skylake_55.h
+
   CACHE INTERNAL "")
 
 set(variorum_intel_sources
@@ -20,6 +22,8 @@ set(variorum_intel_sources
   ${CMAKE_CURRENT_SOURCE_DIR}/Broadwell_4F.c
   ${CMAKE_CURRENT_SOURCE_DIR}/Haswell_3F.c
   ${CMAKE_CURRENT_SOURCE_DIR}/KabyLake_9E.c
+  ${CMAKE_CURRENT_SOURCE_DIR}/Skylake_55.c
+
   CACHE INTERNAL "")
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${variorum_includes})
