- Fixing Skylake build - Formatting all source and header files with astyle - Add support for varying domains of control for getting clock speed information (e.g., for Haswell, domain of control is per-core, while on Ivy Bridge, domain of control is per-socket) - Added MSR_PLATFORM_INFO to set of offsets. This will get the maximum non-turbo ratio. - Re-defining front-facing APIs:     dump/print_package_frequency() --> dump/print_clock_speed()     set_each_package_power_limit() --> set_each_socket_power_limit()
Signed-off-by: Stephanie Labasan <labasan1@llnl.gov>

--- a/src/examples/CMakeLists.txt
+++ b/src/examples/CMakeLists.txt
@@ -12,8 +12,8 @@ set(BASIC_EXAMPLES
   ex-set-power-limits
   ex-dump-counters
   ex-print-counters
-  ex-dump-package-frequency
-  ex-print-package-frequency
+  ex-dump-clock-speed
+  ex-print-clock-speed
   ex-dump-power
   ex-print-power
 )
