--- a/src/variorum/Intel/CMakeLists.txt
+++ b/src/variorum/Intel/CMakeLists.txt
@@ -3,6 +3,7 @@ set(variorum_intel_headers
   ${CMAKE_CURRENT_SOURCE_DIR}/counters_features.h
   ${CMAKE_CURRENT_SOURCE_DIR}/power_features.h
   ${CMAKE_CURRENT_SOURCE_DIR}/thermal_features.h
+  ${CMAKE_CURRENT_SOURCE_DIR}/misc_features.h
   ${CMAKE_CURRENT_SOURCE_DIR}/IvyBridge_3E.h
   ${CMAKE_CURRENT_SOURCE_DIR}/SandyBridge_2A.h
   ${CMAKE_CURRENT_SOURCE_DIR}/Broadwell_4F.h
@@ -17,6 +18,7 @@ set(variorum_intel_sources
   ${CMAKE_CURRENT_SOURCE_DIR}/counters_features.c
   ${CMAKE_CURRENT_SOURCE_DIR}/power_features.c
   ${CMAKE_CURRENT_SOURCE_DIR}/thermal_features.c
+  ${CMAKE_CURRENT_SOURCE_DIR}/misc_features.c
   ${CMAKE_CURRENT_SOURCE_DIR}/IvyBridge_3E.c
   ${CMAKE_CURRENT_SOURCE_DIR}/SandyBridge_2A.c
   ${CMAKE_CURRENT_SOURCE_DIR}/Broadwell_4F.c
