Add function to print if hyperthreading is enabled or disabled using hwloc. If enabled, print the number of threads per core.
Signed-off-by: Stephanie Labasan <labasan1@llnl.gov>

--- a/src/examples/CMakeLists.txt
+++ b/src/examples/CMakeLists.txt
@@ -16,6 +16,7 @@ set(BASIC_EXAMPLES
   ex-print-clock-speed
   ex-dump-power
   ex-print-power
+  ex-dump-hyperthreading
 )
 
 foreach(EXAMPLE ${BASIC_EXAMPLES})
