- Linking against math library for pow and log2 functions - Adding missing declaration for print_dram_power_limit - Reordering CMake list of source and header files by Intel platform
Signed-off-by: Stephanie Labasan <labasan1@llnl.gov>

--- a/src/variorum/CMakeLists.txt
+++ b/src/variorum/CMakeLists.txt
@@ -46,6 +46,7 @@ else()
 endif()
 
 target_link_libraries(variorum PUBLIC ${hwloc_library})
+target_link_libraries(variorum PUBLIC m)
 
 install(TARGETS variorum
         EXPORT  variorum
