Added capability for enabling/disabling Turbo Mode, and printing the status of Turbo Mode.
Signed-off-by: Greyson Blanks <blanks1@llnl.gov>
Signed-off-by: Stephanie Labasan <labasan1@llnl.gov>

--- a/src/examples/CMakeLists.txt
+++ b/src/examples/CMakeLists.txt
@@ -17,6 +17,7 @@ set(BASIC_EXAMPLES
   ex-dump-power
   ex-print-power
   ex-dump-hyperthreading
+  ex-dump-turbo
 )
 
 foreach(EXAMPLE ${BASIC_EXAMPLES})
