Powmon updates:   - Do not install powmon executables   - Powmon sample output location can be configured with function parameter   - Add examples to demonstrate power readings going to a file and going to stdout   - Correct output of power readings to remove trailing whitespace
Signed-off-by: Stephanie Labasan <labasan1@llnl.gov>

--- a/src/examples/CMakeLists.txt
+++ b/src/examples/CMakeLists.txt
@@ -18,7 +18,8 @@ set(BASIC_EXAMPLES
   ex-print-power
   ex-dump-hyperthreading
   ex-dump-turbo
-  ex-poll-power
+  ex-poll-power-to-file
+  ex-poll-power-to-stdout
 )
 
 foreach(EXAMPLE ${BASIC_EXAMPLES})
