- Add two CMake variables to enable and disable logging (VARIORUM_LOG) and   debug statements (VARIORUM_DEBUG) - Correct poll_power function with file pointer as input parameter
Signed-off-by: Stephanie Labasan <labasan1@llnl.gov>

--- a/src/variorum/variorum_config.h.in
+++ b/src/variorum/variorum_config.h.in
@@ -5,5 +5,7 @@
 #cmakedefine VARIORUM_WITH_AMD   @VARIORUM_WITH_AMD@
 #cmakedefine VARIORUM_WITH_IBM   @VARIORUM_WITH_IBM@
 #cmakedefine VARIORUM_WITH_GPU   @VARIORUM_WITH_GPU@
+#cmakedefine VARIORUM_DEBUG      @VARIORUM_DEBUG@
+#cmakedefine VARIORUM_LOG        @VARIORUM_LOG@
 
 #endif
