--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,6 +10,8 @@ option(VARIORUM_WITH_INTEL "Support Intel architectures" ON)
 option(VARIORUM_WITH_AMD   "Support AMD architectures"   ON)
 option(VARIORUM_WITH_IBM   "Support IBM architectures"   ON)
 option(VARIORUM_WITH_GPU   "Support GPU architectures"   ON)
+option(VARIORUM_DEBUG      "Enable debug statements"     OFF)
+option(VARIORUM_LOG        "Enable logging statements"   OFF)
 
 include(CMake/CMakeBasics.cmake)
 
