Update powmon executables and fix compiler warnings: - Use getopt to parse commandline arguments. Executable to be profiled can   contain its own commandline arguments, which can be short or long. - Fix documentation of powmon exeutables, add helpful messages about executable   being profiled, names of output files - Use vertical bars for delimiters instead of spaces in powmon output files - rapl_limit array used for powmon executables is of dynamic length based on   number of sockets
Signed-off-by: Stephanie Labasan <labasan1@llnl.gov>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -32,6 +32,7 @@ endif()
 ### Add our examples
 add_subdirectory(examples)
 
+### Add powmon sampler
 add_subdirectory(powmon)
 
 ### Add documentation targets
