- Sample 3 fixed counters for all threads with powmon sampling utility - Fix timestamp output, increase sample rate from 100 ms to 50 ms
Signed-off-by: Stephanie Labasan <labasan1@llnl.gov>

--- a/src/examples/CMakeLists.txt
+++ b/src/examples/CMakeLists.txt
@@ -20,6 +20,7 @@ set(BASIC_EXAMPLES
   ex-dump-turbo
   ex-poll-power-to-file
   ex-poll-power-to-stdout
+  ex-monitoring-to-file
 )
 
 foreach(EXAMPLE ${BASIC_EXAMPLES})
