Building the docs has two components: Sphinx and Breathe (and Doxygen, but is not the issue). Sphinx is automatically detected on the system, while Breathe is built from source (updated path to Breathe module). Depending on the version of Sphinx, there may be an incompatibility issue. This host config file points to a more recent version of Sphinx.
Signed-off-by: Stephanie Labasan <labasan1@llnl.gov>

--- a/src/docs/breathe/CMakeLists.txt
+++ b/src/docs/breathe/CMakeLists.txt
@@ -8,7 +8,7 @@ ExternalProject_Add(breathe
   SOURCE_DIR ${PROJECT_BINARY_DIR}/thirdparty_builtin/breathe
   PREFIX ${PROJECT_BINARY_DIR}/thirdparty_builtin/breathe-prefix
   CONFIGURE_COMMAND ""
-  BUILD_COMMAND make
+  BUILD_COMMAND make SPHINXBUILD=${SPHINX_EXECUTABLE}
   INSTALL_COMMAND ""
   BUILD_IN_SOURCE 1
 )
