Refactoring HWLOC dependency:     - First, check for user-specifed path to intall     - Second, locate files on the system     - Third, download and build from source as ExternalProject
- Remove install step of ExternalProject. If CMAKE_INSTALL_PREFIX is default
  value of /usr/local, the install will fail due to incorrect permissions.
- Add link to missing HWLOC includes.
- Create power lab Intel-specific CMake configuration file.

Signed-off-by: Stephanie Labasan <labasan1@llnl.gov>

--- a/src/variorum/CMakeLists.txt
+++ b/src/variorum/CMakeLists.txt
@@ -23,6 +23,7 @@ set(variorum_deps ""
 
 set(variorum_includes
     ${CMAKE_CURRENT_SOURCE_DIR}
+    ${HWLOC_INCLUDE_DIRS}
   )
 
 if(VARIORUM_WITH_INTEL)
@@ -45,7 +46,7 @@ else()
                 ${variorum_deps})
 endif()
 
-target_link_libraries(variorum PUBLIC ${hwloc_library})
+target_link_libraries(variorum PUBLIC ${HWLOC_LIBRARY})
 target_link_libraries(variorum PUBLIC m)
 
 install(TARGETS variorum
