Add capability for setting CPU frequencies (upper bound) per core: - Use perf_ctl interface to request CPU frequency - Implement for Skylake platform - Add set clock frequency example that takes a frequency in MHz
Signed-off-by: Stephanie Brink <brink2@llnl.gov>

--- a/src/examples/CMakeLists.txt
+++ b/src/examples/CMakeLists.txt
@@ -21,6 +21,7 @@ set(BASIC_EXAMPLES
   ex-poll-power-to-file
   ex-poll-power-to-stdout
   ex-monitoring-to-file
+  ex-set-cpu-clock-speed
 )
 
 message(STATUS "Adding variorum examples")
