--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,10 +5,10 @@ project(variorum C CXX)
 option(BUILD_SHARED_LIBS   "Build shared libraries"      ON)
 option(BUILD_DOCS          "Build documentation"         ON)
 option(BUILD_TESTS         "Build tests"                 ON)
-option(VARIORUM_WITH_INTEL "Support Intel architectures" ON)
-option(VARIORUM_WITH_AMD   "Support AMD architectures"   ON)
+option(VARIORUM_WITH_INTEL "Support Intel architectures" OFF)
+option(VARIORUM_WITH_AMD   "Support AMD architectures"   OFF)
 option(VARIORUM_WITH_IBM   "Support IBM architectures"   ON)
-option(VARIORUM_WITH_GPU   "Support GPU architectures"   ON)
+option(VARIORUM_WITH_GPU   "Support GPU architectures"   OFF)
 option(VARIORUM_DEBUG      "Enable debug statements"     OFF)
 option(VARIORUM_LOG        "Enable logging statements"   OFF)
 
