More support for IBM
- Basic functionality for set/dump power limits
- Code formatting, variables on separate lines, spell check
- Add macros in config_architectures.c if VARIORUM_LOG is enabled
- Modify examples to distinguish between socket-level and node-level power limits

Signed-off-by: Tapasya Patki <patki1@llnl.gov>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,12 +5,12 @@ project(variorum C CXX)
 option(BUILD_SHARED_LIBS   "Build shared libraries"      ON)
 option(BUILD_DOCS          "Build documentation"         ON)
 option(BUILD_TESTS         "Build tests"                 ON)
-option(VARIORUM_WITH_INTEL "Support Intel architectures" OFF)
-option(VARIORUM_WITH_AMD   "Support AMD architectures"   OFF)
+option(VARIORUM_WITH_INTEL "Support Intel architectures" ON)
+option(VARIORUM_WITH_AMD   "Support AMD architectures"   ON)
 option(VARIORUM_WITH_IBM   "Support IBM architectures"   ON)
-option(VARIORUM_WITH_GPU   "Support GPU architectures"   OFF)
-option(VARIORUM_DEBUG      "Enable debug statements"     OFF)
-option(VARIORUM_LOG        "Enable logging statements"   OFF)
+option(VARIORUM_WITH_GPU   "Support GPU architectures"   ON)
+option(VARIORUM_DEBUG      "Enable debug statements"     ON)
+option(VARIORUM_LOG        "Enable logging statements"   ON)
 
 include(CMake/CMakeBasics.cmake)
 
