--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,7 +9,7 @@ option(VARIORUM_WITH_INTEL "Support Intel architectures" ON)
 option(VARIORUM_WITH_AMD   "Support AMD architectures"   ON)
 option(VARIORUM_WITH_IBM   "Support IBM architectures"   ON)
 option(VARIORUM_WITH_GPU   "Support GPU architectures"   ON)
-option(VARIORUM_DEBUG      "Enable debug statements"     ON)
+option(VARIORUM_DEBUG      "Enable debug statements"     OFF)
 option(VARIORUM_LOG        "Enable logging statements"   ON)
 
 include(CMake/CMakeBasics.cmake)
