Add an exmaple of how to use the JSON get node power API.

--- a/src/examples/CMakeLists.txt
+++ b/src/examples/CMakeLists.txt
@@ -27,6 +27,7 @@ set(BASIC_EXAMPLES
     ex-set-gpu-power-ratio
     ex-set-node-power-limit
     ex-set-socket-power-limits
+    ex-json-get-power
 )
 
 message(STATUS "Adding variorum examples")
