--- a/src/variorum/CMakeLists.txt
+++ b/src/variorum/CMakeLists.txt
@@ -22,6 +22,7 @@ set(variorum_deps ""
 set(variorum_includes
     ${CMAKE_CURRENT_SOURCE_DIR}
     ${HWLOC_INCLUDE_DIRS}
+    ${JANSSON_INCLUDE_DIRS}
   )
 
 if(VARIORUM_WITH_INTEL)
@@ -53,6 +54,7 @@ else()
 endif()
 
 target_link_libraries(variorum PUBLIC ${HWLOC_LIBRARY})
+target_link_libraries(variorum PUBLIC ${JANSSON_LIBRARY})
 target_link_libraries(variorum PUBLIC m)
 
 install(TARGETS variorum
