--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,7 +8,7 @@ option(BUILD_TESTS         "Build tests"                 ON)
 option(VARIORUM_WITH_INTEL "Support Intel architectures" ON)
 option(VARIORUM_WITH_AMD   "Support AMD architectures"   ON)
 option(VARIORUM_WITH_IBM   "Support IBM architectures"   ON)
-option(VARIORUM_WITH_GPU   "Support GPU architectures"   ON)
+option(VARIORUM_WITH_GPU   "Support GPU architectures"   OFF)
 option(VARIORUM_DEBUG      "Enable debug statements"     OFF)
 option(VARIORUM_LOG        "Enable logging statements"   ON)
 
