add more variables

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,6 +22,8 @@ stages:
       COMPILER_FC: gfortran-7
       BUILD_SHARED_LIBS: ON
       CMAKE_BUILD_TYPE: Debug
+      BUILD_DOCS: OFF
+      VARIORUM_LOG: OFF
     steps:
       - checkout: self
         clean: boolean
@@ -81,7 +83,9 @@ stages:
            mkdir build
            cd build
            # setup cmake options
-           export CMAKE_OPTS="-DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}"
+           export CMAKE_OPTS="-DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DHWLOC_DIR=${HWLOC_DIR}"
+           export CMAKE_OPTS="${CMAKE_OPTS} -D${BUILD_DOCS}=${BUILD_DOCS}"
+           export CMAKE_OPTS="${CMAKE_OPTS} -DVARIORUM_LOG=${VARIORUM_LOG}"
            export CMAKE_OPTS="${CMAKE_OPTS} -DBUILD_SHARED_LIBS=${BUILD_SHARED_LIBS}"
            export CMAKE_OPTS="${CMAKE_OPTS} -DCMAKE_INSTALL_PREFIX=../install"
            # configure
