check cmake options

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -79,15 +79,19 @@ stages:
            export ROOT_DIR=$(pwd)
            which cmake
            cmake --version
+           # set hwloc dir
+           export HWLOC_DIR=`ls -d ${ROOT_DIR}/spack/opt/spack/*/*/hwloc-*`
            # prepare build dir
            mkdir build
            cd build
            # setup cmake options
-           export CMAKE_OPTS="-DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DHWLOC_DIR=${HWLOC_DIR}"
+           export CMAKE_OPTS="-DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}"
+           export CMAKE_OPTS="${CMAKE_OPTS} -DHWLOC_DIR=${HWLOC_DIR}"
            export CMAKE_OPTS="${CMAKE_OPTS} -D${BUILD_DOCS}=${BUILD_DOCS}"
            export CMAKE_OPTS="${CMAKE_OPTS} -DVARIORUM_LOG=${VARIORUM_LOG}"
            export CMAKE_OPTS="${CMAKE_OPTS} -DBUILD_SHARED_LIBS=${BUILD_SHARED_LIBS}"
            export CMAKE_OPTS="${CMAKE_OPTS} -DCMAKE_INSTALL_PREFIX=../install"
+           echo "Executing cmake" ${CMAKE_OPTS} "../src"
            # configure
            cmake ${CMAKE_OPTS} ../src
         displayName: 'Configure with CMake'
