add build and install scripts

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -95,3 +95,19 @@ stages:
            # configure
            cmake ${CMAKE_OPTS} ../src
         displayName: 'Configure with CMake'
+
+      - script: |
+           #################################
+           # build
+           #################################
+           cd build
+           make VERBOSE=1
+        displayName: 'Build'
+
+      - script: |
+           #################################
+           # install
+           #################################
+           cd build
+           make install
+        displayName: 'Install'
