Initial commit build for two platforms -- IBM and Nvidia
extend all print APIs to handle many platforms

- add platform enum to determine what index each platform is assigned to

extend set API for multi-node components

Test case: variorum_cap_node_power_limit()
Now takes a dynamic array, length determined by number of architectures
detected within the node.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -87,8 +87,8 @@ endif()
 ### Add our examples
 add_subdirectory(examples)
 
-### Add powmon sampler
-add_subdirectory(powmon)
+#### Add powmon sampler
+#add_subdirectory(powmon)
 
 ### Add config helpers
 add_subdirectory(config)
