variorum: AMD: Add energy and boostlimit reporting
Add function pointers for boostlimit and energy reporting

Provides following functionality
- print/dump_energy()
- print/dump_boostlimit()
- print/set_and_verify_core_boostlimit()
	This API could be simliar to variorum_cap_each_core_frequency_limit()
- print/set_socket_boostlimit()
	This API could be simliar to variorum_cap_socket_frequency()
- Write examples for the above set of features

Signed-off-by: Muralidhara M K <muralimk@amd.com>

--- a/src/examples/CMakeLists.txt
+++ b/src/examples/CMakeLists.txt
@@ -37,6 +37,10 @@ set(BASIC_EXAMPLES
     variorum-print-verbose-power-limit-example
     variorum-print-verbose-power-example
     variorum-print-verbose-thermals-example
+    variorum-print-energy-example
+    variorum-print-boostlimit-example
+    variorum-set-and-verify-core-boostlimit-example
+    variorum-set-socket-boostlimit-example
 )
 
 message(STATUS "Adding variorum examples")
