add mpi monitoring and control examples
- rank 0 is responsible for monitoring and control
- add mpich package to github actions
- add ENABLE_MPI to host configs
- add simple mpi integration C example, add to CI testing suite

--- a/src/examples/CMakeLists.txt
+++ b/src/examples/CMakeLists.txt
@@ -46,7 +46,16 @@ foreach(EXAMPLE ${BASIC_EXAMPLES})
     target_link_libraries(${EXAMPLE} variorum ${variorum_deps})
 endforeach()
 
+if(MPI_FOUND)
+    add_subdirectory(mpi-openmp-examples)
+endif()
+
 include_directories(${CMAKE_SOURCE_DIR}/variorum)
 
 install(DIRECTORY using-with-make using-with-cmake
         DESTINATION examples)
+
+if(MPI_FOUND)
+    install(DIRECTORY using-with-mpi
+            DESTINATION examples)
+endif()
