--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -21,6 +21,7 @@ jobs:
             BUILD_TESTS: ON
             CMAKE_BUILD_TYPE: RelWithDebInfo
             ENABLE_FORTRAN: ON
+            ENABLE_MPI: ON
             VARIORUM_DEBUG: ON
             VARIORUM_LOG: ON
 
@@ -30,6 +31,7 @@ jobs:
             BUILD_TESTS: OFF
             CMAKE_BUILD_TYPE: Debug
             ENABLE_FORTRAN: OFF
+            ENABLE_MPI: OFF
             VARIORUM_DEBUG: ON
             VARIORUM_LOG: ON
 
@@ -39,6 +41,7 @@ jobs:
             BUILD_TESTS: OFF
             CMAKE_BUILD_TYPE: Debug
             ENABLE_FORTRAN: OFF
+            ENABLE_MPI: OFF
             VARIORUM_DEBUG: OFF
             VARIORUM_LOG: OFF
 
@@ -48,6 +51,7 @@ jobs:
             BUILD_TESTS: OFF
             CMAKE_BUILD_TYPE: Debug
             ENABLE_FORTRAN: OFF
+            ENABLE_MPI: OFF
             VARIORUM_DEBUG: ON
             VARIORUM_LOG: ON
 
@@ -57,6 +61,7 @@ jobs:
             BUILD_TESTS: OFF
             CMAKE_BUILD_TYPE: Debug
             ENABLE_FORTRAN: OFF
+            ENABLE_MPI: OFF
             VARIORUM_DEBUG: OFF
             VARIORUM_LOG: OFF
 
@@ -66,6 +71,7 @@ jobs:
             BUILD_TESTS: OFF
             CMAKE_BUILD_TYPE: Debug
             ENABLE_FORTRAN: OFF
+            ENABLE_MPI: OFF
             VARIORUM_DEBUG: OFF
             VARIORUM_LOG: ON
 
@@ -75,6 +81,7 @@ jobs:
             BUILD_TESTS: OFF
             CMAKE_BUILD_TYPE: Debug
             ENABLE_FORTRAN: OFF
+            ENABLE_MPI: OFF
             VARIORUM_DEBUG: ON
             VARIORUM_LOG: OFF
 
@@ -84,6 +91,7 @@ jobs:
             BUILD_TESTS: OFF
             CMAKE_BUILD_TYPE: Debug
             ENABLE_FORTRAN: OFF
+            ENABLE_MPI: OFF
             VARIORUM_DEBUG: ON
             VARIORUM_LOG: ON
 
@@ -93,6 +101,7 @@ jobs:
             BUILD_TESTS: OFF
             CMAKE_BUILD_TYPE: Debug
             ENABLE_FORTRAN: OFF
+            ENABLE_MPI: OFF
             VARIORUM_DEBUG: OFF
             VARIORUM_LOG: OFF
 
@@ -102,6 +111,7 @@ jobs:
             BUILD_TESTS: ON
             CMAKE_BUILD_TYPE: Release
             ENABLE_FORTRAN: OFF
+            ENABLE_MPI: OFF
             VARIORUM_DEBUG: OFF
             VARIORUM_LOG: ON
 
@@ -112,7 +122,7 @@ jobs:
       - name: Install deps on ubuntu
         run: |
           sudo apt-get update
-          sudo apt-get install cmake libhwloc-dev libjansson-dev gfortran python3-sphinx doxygen
+          sudo apt-get install cmake libhwloc-dev libjansson-dev gfortran python3-sphinx doxygen mpich
           cmake --version
           gcc --version
 
@@ -127,6 +137,7 @@ jobs:
           export CMAKE_OPTS="${CMAKE_OPTS} -DBUILD_TESTS=${{matrix.BUILD_TESTS}}"
           export CMAKE_OPTS="${CMAKE_OPTS} -DCMAKE_BUILD_TYPE=${{matrix.CMAKE_BUILD_TYPE}}"
           export CMAKE_OPTS="${CMAKE_OPTS} -DENABLE_FORTRAN=${{matrix.ENABLE_FORTRAN}}"
+          export CMAKE_OPTS="${CMAKE_OPTS} -DENABLE_MPI=${{matrix.ENABLE_MPI}}"
           export CMAKE_OPTS="${CMAKE_OPTS} -DVARIORUM_DEBUG=${{matrix.VARIORUM_DEBUG}}"
           export CMAKE_OPTS="${CMAKE_OPTS} -DVARIORUM_LOG=${{matrix.VARIORUM_LOG}}"
           export CMAKE_OPTS="${CMAKE_OPTS} -DCMAKE_INSTALL_PREFIX=../install"
@@ -147,7 +158,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install cmake libhwloc-dev libjansson-dev
-          sudo apt-get install gfortran
+          sudo apt-get install gfortran mpich
           sudo apt-get install linux-headers-`uname -r`
           cmake --version
           gcc --version
@@ -159,6 +170,7 @@ jobs:
           BUILD_TESTS: OFF
           CMAKE_BUILD_TYPE: Release
           ENABLE_FORTRAN: ON
+          ENABLE_MPI: ON
           VARIORUM_DEBUG: OFF
           VARIORUM_LOG: OFF
           USE_MSR_SAFE_BEFORE_1_5_0: OFF
@@ -172,6 +184,7 @@ jobs:
           export CMAKE_OPTS="${CMAKE_OPTS} -DBUILD_TESTS=${{env.BUILD_TESTS}}"
           export CMAKE_OPTS="${CMAKE_OPTS} -DCMAKE_BUILD_TYPE=${{env.CMAKE_BUILD_TYPE}}"
           export CMAKE_OPTS="${CMAKE_OPTS} -DENABLE_FORTRAN=${{env.ENABLE_FORTRAN}}"
+          export CMAKE_OPTS="${CMAKE_OPTS} -DENABLE_MPI=${{env.ENABLE_MPI}}"
           export CMAKE_OPTS="${CMAKE_OPTS} -DVARIORUM_DEBUG=${{env.VARIORUM_DEBUG}}"
           export CMAKE_OPTS="${CMAKE_OPTS} -DVARIORUM_LOG=${{env.VARIORUM_LOG}}"
           export CMAKE_OPTS="${CMAKE_OPTS} -DUSE_MSR_SAFE_BEFORE_1_5_0=${{env.USE_MSR_SAFE_BEFORE_1_5_0}}"
@@ -248,6 +261,17 @@ jobs:
           make VERBOSE=1
           ./ep.W.x
 
+      - name: Test install with mpi example
+        run: |
+          cd ${GITHUB_WORKSPACE} && cd install
+          cd ./examples/using-with-mpi/c
+          echo -e "PWD:" ${PWD}
+          mkdir _test_build
+          cd _test_build
+          cmake ../
+          make VERBOSE=1
+          ./variorum-print-power-mpi-example
+
   check-code-format:
     runs-on: ubuntu-latest
 
@@ -290,6 +314,7 @@ jobs:
       BUILD_TESTS: ON
       CMAKE_BUILD_TYPE: RelWithDebInfo
       ENABLE_FORTRAN: ON
+      ENABLE_MPI: ON
       VARIORUM_DEBUG: OFF
       VARIORUM_LOG: ON
 
@@ -299,7 +324,7 @@ jobs:
       - name: Install deps on ubuntu
         run: |
           sudo apt-get update
-          sudo apt-get install cmake gfortran python3-sphinx doxygen
+          sudo apt-get install cmake gfortran python3-sphinx doxygen mpich
           cmake --version
           gcc --version
 
@@ -354,6 +379,7 @@ jobs:
           export CMAKE_OPTS="${CMAKE_OPTS} -DBUILD_TESTS=${{env.BUILD_TESTS}}"
           export CMAKE_OPTS="${CMAKE_OPTS} -DCMAKE_BUILD_TYPE=${{env.CMAKE_BUILD_TYPE}}"
           export CMAKE_OPTS="${CMAKE_OPTS} -DENABLE_FORTRAN=${{env.ENABLE_FORTRAN}}"
+          export CMAKE_OPTS="${CMAKE_OPTS} -DENABLE_MPI=${{env.ENABLE_MPI}}"
           export CMAKE_OPTS="${CMAKE_OPTS} -DVARIORUM_DEBUG=${{env.VARIORUM_DEBUG}}"
           export CMAKE_OPTS="${CMAKE_OPTS} -DVARIORUM_LOG=${{env.VARIORUM_LOG}}"
           export CMAKE_OPTS="${CMAKE_OPTS} -DUSE_MSR_SAFE_BEFORE_1_5_0=${{env.USE_MSR_SAFE_BEFORE_1_5_0}}"
